src/sass/_objects.backtotop.scss
.backtotop {
	position: fixed;
	bottom: $divider;
	right: $divider*2;
	z-index: 999;

	width: 30px;
	height: 30px;
	color: $mainColor;
	font-size: 1em;
	text-align: center;

	cursor: pointer;
	display: block;

	&--box {
		// background: red;
		border-radius: 2px;
	}

	&__icon {
		&--center {
			position: relative;
			top: calc(50% - 7px);
		}
	}

	&--disable { display: none }
}

